--- a/Cafe24PROSlim-Max.css
+++ b/Cafe24PROSlim-Max.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Cafe24 PRO Slim";
-  font-weight: Max;
+  font-family: "Cafe24 PRO Slim Max";
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
   src: url("https://cdn.jsdelivr.net/gh/fonts-archive/Cafe24PROSlimMax/Cafe24PROSlim-Max.woff2") format("woff2"),
